[tool.poetry]
name = "pctools"
version = "0.1.0"
description = ""
authors = ["Junya Hirashima <jhirashima99@gmail.com>"]
readme = "README.md"
packages = [{include = "pctools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
